overflow fix

--- a/src/0.2/less/dsc-screen.less
+++ b/src/0.2/less/dsc-screen.less
@@ -13,7 +13,7 @@ section.dsc-screen {
     position: absolute;
     top: 100px;
     z-index: 10;
-    right: 0px;
+    right: 5px;
     transform: rotate(8deg);
     color: #444;
   }
