--- a/src/0.2/less/index.less
+++ b/src/0.2/less/index.less
@@ -4,6 +4,7 @@ html,body {
   width: 100%;
   height: 100%;
   font-family: monospace;
+  overflow-y: hidden;
 }
 
 @import './screen.less';
